--- a/styles/layouts/styles1.scss
+++ b/styles/layouts/styles1.scss
@@ -1,3 +1,18 @@
 h1 {
 	color: teal;
 }
+.ul {
+	&__li {
+		color: red;
+		&__span {
+			background: black;
+			color: #fff;
+		}
+	}
+}
+#joj {
+	color: yellow;
+}
+#klj {
+	font-size: 34px;
+}
