added color guard

--- a/styles/layouts/styles1.scss
+++ b/styles/layouts/styles1.scss
@@ -17,5 +17,22 @@ h1 {
 	font-size: 34px;
 }
 .loalaoa {
-	font-size: 340px;
+	// color: green;
+	// font-weight: bold;
+}
+.red {
+	color: $science-dark;
+
+}
+.green {
+	color: #32CD32;
+}
+.blue {
+	color: #0000FF;
+}
+.yellow {
+	color: #d6ff00
+}
+.teal {
+	color: #56ae67;
 }
