--- a/templates/template1/nav.pug
+++ b/templates/template1/nav.pug
@@ -1,5 +1,7 @@
 ul.ul#joj
-	li.ul__li hlelp
+	li.ul__li.red hlelp
 		span.ul__li__span
-	li.li aldfj
-	li.li fsadf
+	li.li.green aldfj
+	li.li.blue fsadf
+	li.li.yellow aldfj
+	li.li.teal fsadf
